[gd_scene load_steps=11 format=3 uid="uid://d0rfnnmmsowvs"]

[ext_resource type="Texture2D" uid="uid://c4cxtga0rde1p" path="res://assets/bosses/binary_system/binary_system_boss_with_armour.png" id="1_c8ykt"]
[ext_resource type="Script" path="res://scenes/bosses/3_binary_system/small_star.gd" id="1_vvw68"]
[ext_resource type="Shader" path="res://assets/shaders/hit_flash.gdshader" id="2_bupol"]
[ext_resource type="Script" path="res://customs/nodes/health_component.gd" id="3_8iqbf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ds7ch"]
shader = ExtResource("2_bupol")
shader_parameter/active = false
shader_parameter/flash_color = Color(0.176471, 0.631373, 0.768627, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_w3vpg"]
radius = 32.0

[sub_resource type="Animation" id="Animation_aadji"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [43]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_x3n4y"]
resource_name = "death"
length = 1.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17, 18, 19]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_1m4q5"]
resource_name = "hit"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_833te"]
_data = {
"RESET": SubResource("Animation_aadji"),
"death": SubResource("Animation_x3n4y"),
"hit": SubResource("Animation_1m4q5")
}

[node name="SmallStar" type="Area2D" node_paths=PackedStringArray("sprite", "anim_player", "health_component")]
collision_layer = 0
collision_mask = 9
script = ExtResource("1_vvw68")
sprite = NodePath("Sprite2D")
anim_player = NodePath("AnimationPlayer")
health_component = NodePath("HealthComponent")

[node name="Sprite2D" type="Sprite2D" parent="."]
light_mask = 0
material = SubResource("ShaderMaterial_ds7ch")
texture = ExtResource("1_c8ykt")
hframes = 47
frame = 43

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_w3vpg")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3_8iqbf")
max_health = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_833te")
}

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="health_depleted" from="HealthComponent" to="." method="_on_health_component_health_depleted"]
